#1508 Fixed horizontal scrollbar issue in single category (#1509)

--- a/canvas_modules/common-canvas/src/common-properties/components/editor-form/editor-form.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/editor-form/editor-form.scss
@@ -34,6 +34,7 @@ $primary-tab-height: $spacing-08;
 	.properties-single-category {
 		height: 100%;
 		.properties-sub-tab-container {
+			position: relative;
 			height: 100%;
 		}
 		.properties-subtabs {
